--- a/src/app/add-course/add-course.component.html
+++ b/src/app/add-course/add-course.component.html
@@ -21,10 +21,10 @@
                 </div>
                 <div class="col col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">CourseDate</label>
-                    <input name="courseDate" [(ngModel)]="courseDate" type="text" class="form-control">
+                    <input name="courseDate" [(ngModel)]="courseDate" type="date" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                    <button class="btn btn-success">Add</button>
+                    <button (click)="readValues()" class="btn btn-success">Add</button>
                 </div>
             </div>
         </div>
